Fixed Centers and Institutes front page a little bit overflownwhen viewing on iPad

--- a/docroot/sites/all/themes/icompany/customize_icompany.css
+++ b/docroot/sites/all/themes/icompany/customize_icompany.css
@@ -833,7 +833,7 @@ a {
 }
 
 #block-system-main div.panels-flexible-region-126-2nd div.pane-clone-of-centers-and-institutes div.view-footer {
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 #block-system-main div.panels-flexible-region-126-2nd {
